--- a/app/index.html
+++ b/app/index.html
@@ -184,6 +184,8 @@
 <!--<script src="common/view/inputFileUploader.js"></script>-->
 <script src="common/dealAppAttachmentCtrl.js"></script>
 <script src="common/upLoadCtrls.js"></script>
-<script src="lib/perfect-scrollbar/src/js/plugin/handler/selection.js"></script>
+<script src="config/htmlEntity.js"></script>
+<script src="common/WdatePicker.js"></script>
+
 </body>
 </html>
