--- a/app/insurance/contManage/policyInfo/property/propertyInsurance/propertyInsuranceCard.html
+++ b/app/insurance/contManage/policyInfo/property/propertyInsurance/propertyInsuranceCard.html
@@ -63,7 +63,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">险种信息</p>
                     <table class="table table-bordered table-hover">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>险种</th>
                             <th>保险金额/赔偿限额(元)</th>
@@ -84,7 +84,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">投保人</p>
                     <table class="table table-bordered table-hover">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>投保人</th>
                             <th>投保人统一社会信用代码</th>
@@ -105,7 +105,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">保险公司</p>
                     <table class="table table-bordered table-hover">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>保险公司</th>
                             <th>保险金额/赔偿限额(元)</th>
@@ -130,7 +130,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">被保人</p>
                     <table class="table table-bordered table-hover">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>被保人</th>
                             <th>被保人统一社会信用代码</th>
@@ -363,8 +363,8 @@
             <div class="col-md-12">
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">保险险种信息</p>
-                    <table class="table table-bordered table-hover">
-                        <thead>
+                    <table class="table table-bordered table-hover" >
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th class="center">主险种</th>
                             <th>险种名称</th>
@@ -394,7 +394,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">被保人信息</p>
                     <table class="table table-bordered table-hover">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>序号</th>
                             <th>被保人</th>
@@ -425,7 +425,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">保险人信息</p>
                     <table class="table table-bordered table-hover">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>序号</th>
                             <th>保险人名称</th>
@@ -472,7 +472,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">收付款信息</p>
                     <table class="table table-bordered table-hover">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th class="center">期数</th>
                             <th>收付款类型</th>
@@ -509,7 +509,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">合作伙伴信息<span ng-if="VO.partner.length==0">（空）</span></p>
                     <table class="table table-bordered table-hover" ng-if="VO.partner.length!=0">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>合作伙伴</th>
                             <th>合作伙伴地址</th>
@@ -534,7 +534,7 @@
                 <div class="table-responsive">
                     <p style="font-size: 16px;color: #8e8e93">暂保单<span ng-if="VO.policy.length==0">（空）</span></p>
                     <table class="table table-bordered table-hover" ng-if="VO.policy.length!=0">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>暂保单信息编号</th>
                             <th>暂保单名称</th>
@@ -557,7 +557,7 @@
                         </button>
                     </p>
                     <table class="table table-bordered table-hover" ng-if="VO.dealAttachmentB.length!=0">
-                        <thead>
+                        <thead style="background: #d9edf7;font-weight: bold">
                         <tr>
                             <th>附件类型</th>
                             <th>附件名称</th>
