--- a/app/nav/main-content.html
+++ b/app/nav/main-content.html
@@ -4,6 +4,11 @@
 <!--    <div class="lr-title-menu"></div>-->
 <!--    <div ui-view class="wrap-content container fade-in-up" id="container"></div>-->
 <!--</div>-->
+<!--<div>-->
+<!--    <div ncy-breadcrumb  style="margin:0;display: inline-block;width: 100%"></div>-->
+<!--    <div class="lr-title-menu"></div>-->
+<!--    <div ui-view class="wrap-content container fade-in-up" id="container"></div>-->
+<!--</div>-->
 <div class="tabbable">
     <ul class="nav nav-tabs ">
         <li ng-repeat="item in currentTabs" ng-class="{'active':item.active}">
