--- a/app/insurance/base/business/documents/documentsCard.html
+++ b/app/insurance/base/business/documents/documentsCard.html
@@ -71,19 +71,31 @@
                     <span>制单时间：</span><span class="fontStyle">{{VO.operateTime}}</span>
                 </div>
             </div>
-            <div class="col-md-12 card-grid">
-                <div>
-                    <div class="pull-right lr-mr10 lr-mt10">
-                        <button class="btn btn-sm btn-info" ng-click="onDownLoads();">批量下载</button>
-                    </div>
-                    <tabset justified="false">
-                        <tab index="1" heading="附件信息" select="selectTab('dealAttachmentBGridOptions')">
-                            <div ui-grid="dealAttachmentBGridOptions" ui-grid-cellnav ui-grid-selection
-                                 ui-grid-auto-resize ui-grid-resize-columns class="grid" style="height: 200px"></div>
-                        </tab>
-                    </tabset>
+<!--            附件-->
+<!--            <div class="col-md-12 card-grid">-->
+<!--                <div>-->
+<!--                    <div class="pull-right lr-mr10 lr-mt10">-->
+<!--                        <button class="btn btn-sm btn-info" ng-click="onDownLoads();">批量下载</button>-->
+<!--                    </div>-->
+<!--                    <tabset justified="false">-->
+<!--                        <tab index="1" heading="附件信息" select="selectTab('dealAttachmentBGridOptions')">-->
+<!--                            <div ui-grid="dealAttachmentBGridOptions" ui-grid-cellnav ui-grid-selection-->
+<!--                                 ui-grid-auto-resize ui-grid-resize-columns class="grid" style="height: 200px"></div>-->
+<!--                        </tab>-->
+<!--                    </tabset>-->
+<!--                </div>-->
+<!--            </div>-->
+        </div>
+        <div class="col-md-12">
+            <div class="btn lr-insureType-btn" style="width: 100%">
+                <div class="pull-right lr-mr10 lr-mt10" style="margin-right: 50px;">
+                    <button class="btn btn-sm btn-info" type="button" ng-show="isEdit" ng-click="onUploads();" >上传</button>
+                    <button class="btn btn-sm btn-info" type="button" ng-show="isEdit" ng-click="onDeleteLine();">删除</button>
+                    <button class="btn btn-sm btn-info" type="button" ng-click="onDownLoads();" ng-show="upOrDown">下载</button>
                 </div>
             </div>
+            <div ui-grid="dealAttachmentBGridOptions" ui-grid-edit ui-grid-cellnav ui-grid-selection
+                 ui-grid-auto-resize ui-grid-resize-columns class="grid" style="height: 200px"></div>
         </div>
         <div class="col-md-12 font-style-audit-title title" ng-show="mess">
             <p class="taskmess">审批信息</p>
