--- a/app/insurance/base/customer/personalCustomer/personalCustomerCard.html
+++ b/app/insurance/base/customer/personalCustomer/personalCustomerCard.html
@@ -113,118 +113,67 @@
 <!--            </div>-->
         </div>
         <!--        账户信息-->
-        <div class="col-md-12 title" ng-show="AccountList.length>0">
-            <p style="font-size:20px">账户信息</p>
-            <div class="col-md-12">
-                <div ng-repeat="item in AccountList" style="background:#ffffff">
-                    <accordion class=""  >
-                        <accordion-group is-open="true" class="lr-page-bg-gray">
-                            <div class="col-md-12" >
-                                <div class="col-md-4">
-                                    <span>账户类型：</span><span class="fontStyle">{{item.accType | SELECT_ACCTYPE}}</span>
-                                </div>
-                                <div class="col-md-4">
-                                    <span>开户名称：</span><span class="fontStyle">{{item.accName}}</span>
-                                </div>
-                                <div class="col-md-4">
-                                    <span>账号：</span><span class="fontStyle"> {{item.accNum}}</span>
-                                </div>
-                            </div>
-                            <div class="col-md-12" >
-                                <div class="col-md-4">
-                                    <span>开户银行：</span><span class="fontStyle">{{item.accBlank}}</span>
-                                </div>
-                                <div class="col-md-4">
-                                    <span>银行联行号：</span><span class="fontStyle">{{item.jointBankNum}}</span>
-                                </div>
-                            </div>
-                        </accordion-group>
-                    </accordion>
-                </div>
+        <div class="col-md-12" ng-show="AccountList.length>0">
+            <div class="table-responsive">
+                <p style="font-size: 16px;color: #8e8e93">账户信息</p>
+                <table class="table table-bordered table-hover">
+                    <thead style="background: #d9edf7;font-weight: bold">
+                    <tr>
+                        <th>序号</th>
+                        <th>账户类型</th>
+                        <th>开户名称</th>
+                        <th>账号</th>
+                        <th>开户银行</th>
+                        <th>银行联行号</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="item in AccountList" >
+                        <th>{{$index+1}}</th>
+                        <td>{{item.accType | SELECT_ACCTYPE}}</td>
+                        <td>{{item.accName}}</td>
+                        <th>{{item.accNum}}</th>
+                        <td>{{item.accBlank}}</td>
+                        <td>{{item.jointBankNum}}</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
         <!--        联系人信息-->
-        <div class="col-md-12 title" ng-show="LinkmanList.length>0">
-            <p style="font-size:20px">联系人信息</p>
-            <div class="col-md-12">
-                <div ng-repeat="item in LinkmanList" style="background:#ffffff">
-                    <accordion class=""  >
-                        <accordion-group is-open="true" class="lr-page-bg-gray">
-                            <div class="form-group">
-                                <div class="col-md-12" >
-                                    <div class="col-md-4">
-                                        <span>联系人类型：</span><span class="fontStyle">{{item.linkmanType | SELECT_LINKMANTYPE}}</span>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <span>联系人姓名：</span><span class="fontStyle">{{item.name}}</span>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <span>联系人部门：</span><span class="fontStyle">{{item.dept}}</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-12" >
-                                    <div class="col-md-4">
-                                        <span>联系人地址：</span><span class="fontStyle">{{item.address}}</span>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <span>邮编：</span><span class="fontStyle">{{item.post}}</span>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <span>联系人电话：</span><span class="fontStyle"> {{item.tele}}</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-12" >
-                                    <div class="col-md-4">
-                                        <span>传真：</span><span class="fontStyle"> {{item.fax}}</span>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <span>电子邮箱：</span><span class="fontStyle"> {{item.mail}}</span>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <span>备注：</span><span class="fontStyle"> {{item.memo}}</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </accordion-group>
-                    </accordion>
-                </div>
-            </div>
-        </div>
-        <!--        附件信息-->
-        <div class="col-md-12 title" ng-if="VO.dealAttachmentB.length!=0">
-            <p style="font-size:20px">附件信息</p>
-            <div class="col-md-12"  ng-if="VO.dealAttachmentB.length!=0">
-                <div class="table-responsive">
-                    <p style="font-size: 14px;color: #748390;margin-left: 0px;font-weight: 600">其他附件</p>
-                    <table class="table table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <th>附件名称</th>
-                            <th>下载</th>
-                            <th>在线预览</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr ng-repeat="item in VO.dealAttachmentB">
-                            <td>{{item.attachment_name}}</td>
-                            <td>
-                                <div class="visible-md visible-lg hidden-sm hidden-xs">
-                                    <a href="#" ng-click="onDownLoadsCard(item.pk_project_id)"
-                                       class="btn btn-transparent btn-xs tooltips" tooltip-placement="top" tooltip="下载" style="color: #af2b27"><i
-                                            class="fa fa-download"></i></a>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="visible-md visible-lg hidden-sm hidden-xs">
-                                    <a href="#" ng-click="onPreviewFile(item.pk_project_id,item.attachment_name)"
-                                       class="btn btn-transparent btn-xs tooltips" tooltip-placement="top" tooltip="在线预览"><i
-                                            class="fa fa-eye"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+        <div class="col-md-12" ng-show="LinkmanList.length>0">
+            <div class="table-responsive">
+                <p style="font-size: 16px;color: #8e8e93">联系人信息</p>
+                <table class="table table-bordered table-hover">
+                    <thead style="background: #d9edf7;font-weight: bold">
+                    <tr>
+                        <th>序号</th>
+                        <th>联系人类型</th>
+                        <th>联系人姓名</th>
+                        <th>联系人部门</th>
+                        <th>联系人地址</th>
+                        <th>邮编</th>
+                        <th>联系人电话</th>
+                        <th>传真</th>
+                        <th>电子邮箱</th>
+                        <th>备注</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="item in LinkmanList" >
+                        <th>{{$index+1}}</th>
+                        <td>{{item.linkmanType | SELECT_LINKMANTYPE}}</td>
+                        <td>{{item.name}}</td>
+                        <td>{{item.dept}}</td>
+                        <td>{{item.address}}</td>
+                        <td>{{item.post}}</td>
+                        <td>{{item.tele}}</td>
+                        <td>{{item.fax}}</td>
+                        <td>{{item.mail}}</td>
+                        <td>{{item.memo}}</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
